[SMPI/PAPI] Added cmake switch for SMPI+PAPI
This commit includes:

- Enable/disable PAPI bindings via ccmake
- The FindPAPI.cmake file
- The #define for C/C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,13 @@ endif()
 if(WIN32)
   set(Boost_USE_STATIC_LIBS 1)
 endif()
+set(HAVE_PAPI 0)
+if(enable_smpi_papi)
+  include(FindPAPI)
+  if (NOT HAVE_PAPI)
+    message(FATAL_ERROR "Cannot find PAPI. Please install it (apt-get install papi-tools libpapi-dev) or disable PAPI bindings.")
+  endif()
+endif()
 
 find_package(Boost 1.48)
 if(Boost_FOUND)
@@ -962,6 +969,7 @@ message("        Compile Smpi ................: ${HAVE_SMPI}")
 message("          Smpi fortran ..............: ${SMPI_FORTRAN}")
 message("          MPICH3 testsuite ..........: ${enable_smpi_MPICH3_testsuite}")
 message("          Privatization .............: ${HAVE_PRIVATIZATION}")
+message("          PAPI support...............: ${HAVE_PAPI}")
 message("        Compile Boost.Context support: ${HAVE_BOOST_CONTEXTS}")
 message("")
 message("        Maintainer mode .............: ${enable_maintainer_mode}")
