--- a/examples/msg/CMakeLists.txt
+++ b/examples/msg/CMakeLists.txt
@@ -1,5 +1,5 @@
 foreach(x actions-comm actions-storage app-masterworker async-wait async-waitall async-waitany cloud-capping
-          cloud-masterworker cloud-migration cloud-multicore cloud-scale cloud-simple cloud-two-tasks dht-chord 
+          cloud-masterworker cloud-migration cloud-multicore cloud-simple cloud-two-tasks dht-chord 
           dht-pastry exception energy-consumption energy-onoff energy-pstate energy-ptask energy-vm failures io-file 
           io-file-unlink io-remote io-storage pmm task-priority process-kill process-migration process-suspend 
           properties sendrecv set-maestro process-startkilltime synchro token_ring trace-categories 
@@ -82,7 +82,7 @@ set(xml_files    ${xml_files}     ${CMAKE_CURRENT_SOURCE_DIR}/actions-comm/actio
                                   ${CMAKE_CURRENT_SOURCE_DIR}/process-startkilltime/start_kill_d.xml       PARENT_SCOPE)
 
 foreach(x actions-comm actions-storage app-bittorrent app-chainsend app-masterworker async-wait async-waitall
-          async-waitany cloud-capping cloud-masterworker cloud-migration cloud-scale cloud-simple cloud-two-tasks 
+          async-waitany cloud-capping cloud-masterworker cloud-migration cloud-simple cloud-two-tasks 
           dht-chord dht-kademlia failures io-file io-file-unlink io-remote io-storage task-priority process-kill
           process-migration process-suspend properties sendrecv synchro process-startkilltime token_ring)
   ADD_TESH_FACTORIES(msg-${x} "thread;ucontext;raw;boost" --setenv bindir=${CMAKE_BINARY_DIR}/examples/msg/${x} --setenv srcdir=${CMAKE_HOME_DIRECTORY}/examples/platforms --cd ${CMAKE_HOME_DIRECTORY}/examples/msg/${x} ${x}.tesh)
