--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -716,13 +716,13 @@ INPUT +=                 @CMAKE_HOME_DIRECTORY@/examples/msg/app-pingpong/app-pi
                          @CMAKE_HOME_DIRECTORY@/examples/msg/network-ns3/network-ns3.c \
                          @CMAKE_HOME_DIRECTORY@/examples/msg/io-storage/io-storage.c \
                          @CMAKE_HOME_DIRECTORY@/examples/msg/io-file/io-file.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/io-file/io-remote.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/actions \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/pmm \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/chord\
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/io-remote/io-remote.c \
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/actions-comm/actions-comm.c \
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/actions-storage/actions-storage.c \
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/app-pmm/ \
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/dht-chord \
                          @CMAKE_HOME_DIRECTORY@/examples/msg/task-priority/task-priority.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/properties \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/parallel_task
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/properties/properties.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
