--- a/teshsuite/smpi/isp/umpire/CMakeLists.txt
+++ b/teshsuite/smpi/isp/umpire/CMakeLists.txt
@@ -32,9 +32,12 @@ set(umpire_tests_passing
   sendrecv-deadlock
   send-recv-ok
   irecv-isend-ok
-  irecv-isend-ok2
   lost-request-waitall
  ) # Passing (no deadlock) tests
+
+set(umpire_tests_passing_broken
+  irecv-isend-ok2
+  )
 
 # These are supposed to deadlock but ISP does not find deadlock
 # and we don't either. What should be test here?
@@ -47,17 +50,9 @@ set(umpire_tests_missed_deadlock
 
 set(umpire_tests_deadlock
   any_src-can-deadlock10
-  any_src-can-deadlock10_mod
-  any_src-can-deadlock11
   any_src-can-deadlock4
-  any_src-can-deadlock4_mod
   any_src-can-deadlock5
-  any_src-can-deadlock5_mod
   any_src-can-deadlock6
-  any_src-can-deadlock6_mod
-  any_src-can-deadlock7
-  any_src-can-deadlock8
-  any_src-can-deadlock9
   any_src-waitall-deadlock
   any_src-waitall-deadlock2
   any_src-waitall-deadlock3
@@ -71,22 +66,33 @@ set(umpire_tests_deadlock
   basic-deadlock-comm_split
   bcast-deadlock
   collective-misorder
-  collective-misorder2
   collective-misorder-allreduce
-  comm-bcast-deadlock
-  comm-deadlock
   complex-deadlock
-  dropped-req
   finalize-deadlock
   irecv-deadlock
   waitall-deadlock
   waitany-deadlock
   wait-deadlock
  ) # failing (deadlocking) tests
+
+# Compile but run those tests:
+set(umpire_tests_deadlock_broken
+  any_src-can-deadlock10_mod
+  any_src-can-deadlock4_mod
+  any_src-can-deadlock5_mod
+  any_src-can-deadlock6_mod
+  any_src-can-deadlock7
+  any_src-can-deadlock8
+  any_src-can-deadlock9
+  any_src-can-deadlock11
+  collective-misorder2
+  comm-bcast-deadlock
+  dropped-req
+  comm-deadlock
+)
  
 set(umpire_tests_problematic
   deadlock-config # No deadlock detected by ISP unless MPI_Send blocking activated
-
  ) # problematic tests
  
  # These files are not listed on http://formalverification.cs.utah.edu/ISP_Tests/
@@ -181,7 +187,11 @@ foreach(file ${umpire_src_other})
   set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
 endforeach()
 
-foreach(file ${umpire_tests_passing} ${umpire_tests_deadlock} ${umpire_tests_missed_deadlock} ${umpire_tests_problematic}  ) 
+foreach(file
+    ${umpire_tests_passing}  ${umpire_tests_passing_broken}
+    ${umpire_tests_deadlock} ${umpire_tests_deadlock_broken} ${umpire_tests_missed_deadlock}
+    ${umpire_tests_problematic}
+    ${umpire_tests_ignored} )
   set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/${file}.c)
 endforeach()
 set(txt_files ${txt_files} ${sources} PARENT_SCOPE)
